# ruststack

./: .dockerignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  _typos.toml  action.yml  deny.toml
.chats/: 20260227.md  20260228.md  20260301.md  20260302.md
.github/workflows/: apigatewayv2-test.yml  build.yml  cloudwatch-test.yml  dynamodb-test.yml  dynamodbstreams-test.yml  events-test.yml  iam-test.yml  integration.yml  kinesis-test.yml  kms-test.yml  lambda-test.yml  (+11 more)
apps/rustack/: Cargo.toml
apps/rustack/src/: handler.rs  main.rs
apps/ruststack-s3-server/: Cargo.toml
apps/ruststack-s3-server/src/: handler.rs  main.rs
apps/ruststack-server/: Cargo.toml
apps/ruststack-server/src/: events_bridge.rs  gateway.rs  handler.rs  main.rs  service.rs  sns_bridge.rs
codegen/: Cargo.toml
crates/rustack-apigatewayv2-core/: Cargo.toml
crates/rustack-apigatewayv2-core/src/: error.rs  handler.rs  lib.rs  provider.rs  storage.rs
crates/rustack-apigatewayv2-core/src/execution/: cors.rs  event.rs  http_proxy.rs  lambda_proxy.rs  mock_integration.rs  mod.rs
crates/rustack-cloudfront-dataplane/: Cargo.toml
crates/rustack-cloudfront-dataplane/src/: divergence.rs  plane.rs
crates/rustack-cloudfront-http/: Cargo.toml
crates/rustack-cloudfront-http/src/: dispatch.rs  request.rs
crates/rustack-cloudfront-http/src/xml/: de.rs
crates/rustack-cloudwatch-core/: Cargo.toml
crates/rustack-cloudwatch-core/src/: aggregation.rs  alarm_store.rs  anomaly_store.rs  dashboard_store.rs  dimensions.rs  handler.rs  insight_store.rs  lib.rs  metric_store.rs  provider.rs  validation.rs
crates/rustack-cloudwatch-http/: Cargo.toml
crates/rustack-cloudwatch-http/src/: dispatch.rs  lib.rs  request.rs  response.rs  router.rs  service.rs
crates/rustack-dynamodb-core/: Cargo.toml
crates/rustack-dynamodb-core/src/: config.rs  error.rs  handler.rs  lib.rs  provider.rs  state.rs  storage.rs  stream.rs
crates/rustack-dynamodb-core/src/expression/: evaluator.rs
crates/rustack-dynamodb-http/: Cargo.toml
crates/rustack-dynamodb-http/src/: body.rs  dispatch.rs  lib.rs  response.rs  router.rs  service.rs
crates/rustack-dynamodbstreams-http/: Cargo.toml
crates/rustack-dynamodbstreams-http/src/: body.rs  dispatch.rs  lib.rs  response.rs  router.rs  service.rs
crates/rustack-events-core/: Cargo.toml
crates/rustack-events-core/src/: config.rs  delivery.rs  handler.rs  lib.rs  provider.rs
crates/rustack-events-core/src/pattern/: mod.rs  operators.rs  parser.rs  value.rs
crates/rustack-events-model/: Cargo.toml
crates/rustack-events-model/src/: error.rs  input.rs  lib.rs  operations.rs  output.rs  types.rs
crates/rustack-iam-core/: Cargo.toml
crates/rustack-iam-core/src/: arn.rs  handler.rs  id_gen.rs  lib.rs  provider.rs  types.rs  validation.rs
crates/rustack-iam-http/: Cargo.toml
crates/rustack-iam-http/src/: dispatch.rs  lib.rs  request.rs  response.rs  router.rs  service.rs
crates/rustack-kinesis-core/: Cargo.toml
crates/rustack-kinesis-core/src/: config.rs  error.rs  handler.rs  lib.rs  provider.rs
crates/rustack-kinesis-core/src/shard/: actor.rs  hash.rs  iterator.rs  mod.rs  storage.rs
crates/rustack-kms-core/: Cargo.toml
crates/rustack-kms-core/src/: ciphertext.rs  config.rs  crypto.rs  handler.rs  key.rs  lib.rs  provider.rs  resolve.rs  state.rs  validation.rs
crates/rustack-kms-http/: Cargo.toml
crates/rustack-kms-http/src/: dispatch.rs  lib.rs  response.rs  router.rs  service.rs
crates/rustack-lambda-core/: Cargo.toml
crates/rustack-lambda-core/src/: config.rs  error.rs  handler.rs  lib.rs  provider.rs  resolver.rs  storage.rs
crates/rustack-lambda-core/src/executor/: error.rs  instance.rs  mod.rs  native.rs  noop.rs  runtime_api.rs  types.rs
crates/rustack-lambda-http/: Cargo.toml
crates/rustack-lambda-http/src/: dispatch.rs  lib.rs  response.rs  router.rs  service.rs
crates/rustack-lambda-model/: Cargo.toml
crates/rustack-lambda-model/src/: lib.rs  types.rs
crates/rustack-logs-http/: Cargo.toml
crates/rustack-logs-http/src/: body.rs  dispatch.rs  lib.rs  response.rs  router.rs  service.rs
crates/rustack-secretsmanager-core/: Cargo.toml
crates/rustack-secretsmanager-core/src/: filter.rs  handler.rs  lib.rs  password.rs  provider.rs  storage.rs  validation.rs
crates/rustack-secretsmanager-http/: Cargo.toml
crates/rustack-secretsmanager-http/src/: dispatch.rs  lib.rs  response.rs  router.rs  service.rs
crates/rustack-ses-core/: Cargo.toml
crates/rustack-ses-core/src/: config_set.rs  handler.rs  identity.rs  lib.rs  provider.rs  receipt_rule.rs  statistics.rs  template.rs  validation.rs
crates/rustack-sns-core/: Cargo.toml
crates/rustack-sns-core/src/: config.rs  delivery.rs  filter.rs  handler.rs  lib.rs  provider.rs  publisher.rs  state.rs  subscription.rs
crates/rustack-sns-http/: Cargo.toml
crates/rustack-sns-http/src/: body.rs  dispatch.rs  lib.rs  request.rs  response.rs  router.rs  service.rs
crates/rustack-sns-model/: Cargo.toml
crates/rustack-sns-model/src/: error.rs  input.rs  lib.rs  types.rs
crates/rustack-sqs-core/: Cargo.toml
crates/rustack-sqs-core/src/: config.rs  handler.rs  lib.rs  message.rs  provider.rs
crates/rustack-sqs-core/src/queue/: actor.rs  attributes.rs  mod.rs  url.rs
docs/: index.md
scripts/: publish.sh
specs/: README.md  rust-rewrite-feasibility.md  ruststack-apigatewayv2-design.md  ruststack-cloudwatch-design.md  ruststack-dynamodb-design.md  ruststack-dynamodbstreams-design.md  ruststack-events-design.md  ruststack-iam-design.md  ruststack-kinesis-design.md  ruststack-kms-design.md  ruststack-lambda-design.md  ruststack-lambda-executor-design.md  ruststack-logs-design.md  ruststack-s3-implementation.md  ruststack-secretsmanager-design.md  ruststack-ses-design.md  ruststack-sns-design.md  ruststack-sqs-design.md  ruststack-ssm-design.md  ruststack-sts-design.md  s3-checksum-parity-design.md  service-operations-gap-impl-plan.md  smithy-codegen-all-services-design.md  smithy-s3-redesign-design.md
(+651 files in other folders)
