[workspace]
members = ["crates/*", "apps/*", "tests/integration"]
exclude = ["codegen"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
repository = "https://github.com/tyrchen/ruststack"

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
collapsible_if = "allow"

[workspace.dependencies]
# Internal crates
ruststack-core = { path = "crates/ruststack-core" }
ruststack-auth = { path = "crates/ruststack-auth" }
ruststack-s3-core = { path = "crates/ruststack-s3-core" }
ruststack-s3-http = { path = "crates/ruststack-s3-http" }
ruststack-s3-model = { path = "crates/ruststack-s3-model" }
ruststack-s3-xml = { path = "crates/ruststack-s3-xml" }
ruststack-dynamodb-model = { path = "crates/ruststack-dynamodb-model" }
ruststack-dynamodb-http = { path = "crates/ruststack-dynamodb-http" }
ruststack-dynamodb-core = { path = "crates/ruststack-dynamodb-core" }
ruststack-sqs-model = { path = "crates/ruststack-sqs-model" }
ruststack-sqs-http = { path = "crates/ruststack-sqs-http" }
ruststack-sqs-core = { path = "crates/ruststack-sqs-core" }
ruststack-ssm-model = { path = "crates/ruststack-ssm-model" }
ruststack-ssm-http = { path = "crates/ruststack-ssm-http" }
ruststack-ssm-core = { path = "crates/ruststack-ssm-core" }
ruststack-sns-model = { path = "crates/ruststack-sns-model" }
ruststack-sns-http = { path = "crates/ruststack-sns-http" }
ruststack-sns-core = { path = "crates/ruststack-sns-core" }
ruststack-lambda-model = { path = "crates/ruststack-lambda-model" }
ruststack-lambda-http = { path = "crates/ruststack-lambda-http" }
ruststack-lambda-core = { path = "crates/ruststack-lambda-core" }
ruststack-events-model = { path = "crates/ruststack-events-model" }
ruststack-logs-model = { path = "crates/ruststack-logs-model" }
ruststack-logs-http = { path = "crates/ruststack-logs-http" }
ruststack-logs-core = { path = "crates/ruststack-logs-core" }
ruststack-events-http = { path = "crates/ruststack-events-http" }
ruststack-events-core = { path = "crates/ruststack-events-core" }
ruststack-kms-model = { path = "crates/ruststack-kms-model" }
ruststack-kms-http = { path = "crates/ruststack-kms-http" }
ruststack-kms-core = { path = "crates/ruststack-kms-core" }
ruststack-kinesis-model = { path = "crates/ruststack-kinesis-model" }
ruststack-kinesis-http = { path = "crates/ruststack-kinesis-http" }
ruststack-kinesis-core = { path = "crates/ruststack-kinesis-core" }
ruststack-secretsmanager-model = { path = "crates/ruststack-secretsmanager-model" }
ruststack-secretsmanager-http = { path = "crates/ruststack-secretsmanager-http" }
ruststack-secretsmanager-core = { path = "crates/ruststack-secretsmanager-core" }
ruststack-ses-model = { path = "crates/ruststack-ses-model" }
ruststack-ses-http = { path = "crates/ruststack-ses-http" }
ruststack-ses-core = { path = "crates/ruststack-ses-core" }
ruststack-apigatewayv2-model = { path = "crates/ruststack-apigatewayv2-model" }
ruststack-apigatewayv2-http = { path = "crates/ruststack-apigatewayv2-http" }
ruststack-apigatewayv2-core = { path = "crates/ruststack-apigatewayv2-core" }
ruststack-cloudwatch-model = { path = "crates/ruststack-cloudwatch-model" }
ruststack-cloudwatch-http = { path = "crates/ruststack-cloudwatch-http" }
ruststack-cloudwatch-core = { path = "crates/ruststack-cloudwatch-core" }
ruststack-dynamodbstreams-model = { path = "crates/ruststack-dynamodbstreams-model" }
ruststack-dynamodbstreams-http = { path = "crates/ruststack-dynamodbstreams-http" }
ruststack-dynamodbstreams-core = { path = "crates/ruststack-dynamodbstreams-core" }
ruststack-iam-model = { path = "crates/ruststack-iam-model" }
ruststack-iam-http = { path = "crates/ruststack-iam-http" }
ruststack-iam-core = { path = "crates/ruststack-iam-core" }
ruststack-sts-model = { path = "crates/ruststack-sts-model" }
ruststack-sts-http = { path = "crates/ruststack-sts-http" }
ruststack-sts-core = { path = "crates/ruststack-sts-core" }

# Async runtime
tokio = { version = "1.50", features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "sync",
  "time",
  "io-util",
  "fs",
  "net",
] }

# HTTP / networking
hyper = { version = "1.8", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = [
  "tokio",
  "server-auto",
  "server-graceful",
] }
http = "1.4"
http-body = "1.0"
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"
quick-xml = "0.39"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Concurrent data structures
dashmap = "6.1"
parking_lot = "0.12"

# Crypto / checksums
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
crc32fast = "1.5"
crc32c = "0.6"
crc64fast-nvme = "1.2"
base64 = "0.22"
hex = "0.4"
hmac = "0.12"
digest = "0.10"
subtle = "2.6"

# Time / IDs
chrono = { version = "0.4", features = ["serde"] }
time = "0.3.47"
uuid = { version = "1.22", features = ["v4"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async utilities
async-trait = "0.1"

# Regex
regex = "1.12"

# Utilities
bytes = "1.11"
rand = "0.9"
tempfile = "3.27"
percent-encoding = "2.3"
mime = "0.3"
futures = "0.3"
pin-project-lite = "0.2"
typed-builder = "0.23"
form_urlencoded = "1.2"

# Testing
tokio-test = "0.4"
aws-config = "1.8"
aws-sdk-s3 = "1.127"
aws-sdk-dynamodb = "1.109"
aws-sdk-dynamodbstreams = "1"
aws-sdk-sqs = "1.97"
aws-sdk-ssm = "1.108"
aws-sdk-sns = "1.98"
aws-sdk-lambda = "1.119"
aws-sdk-cloudwatch = "1"
aws-sdk-cloudwatchlogs = "1.121"
aws-sdk-eventbridge = "1.104"
aws-sdk-kms = "1"
aws-sdk-kinesis = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-ses = "1"
aws-sdk-apigatewayv2 = "1"
aws-sdk-iam = "1"
aws-sdk-sts = "1"
reqwest = { version = "0.13", features = ["json"] }
aws-credential-types = "1.2"
aws-smithy-runtime-api = "1.11"
