[workspace]
members = ["crates/*", "apps/*", "tests/integration"]
exclude = ["codegen"]
resolver = "3"

[workspace.package]
version = "0.6.0"
edition = "2024"
license = "MIT"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
repository = "https://github.com/tyrchen/rustack"

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
collapsible_if = "allow"

[workspace.dependencies]
# Internal crates
rustack-core = { version = "0.6.0", path = "crates/rustack-core" }
rustack-auth = { version = "0.6.0", path = "crates/rustack-auth" }
rustack-s3-core = { version = "0.6.0", path = "crates/rustack-s3-core" }
rustack-s3-http = { version = "0.6.0", path = "crates/rustack-s3-http" }
rustack-s3-model = { version = "0.6.0", path = "crates/rustack-s3-model" }
rustack-s3-xml = { version = "0.6.0", path = "crates/rustack-s3-xml" }
rustack-dynamodb-model = { version = "0.6.0", path = "crates/rustack-dynamodb-model" }
rustack-dynamodb-http = { version = "0.6.0", path = "crates/rustack-dynamodb-http" }
rustack-dynamodb-core = { version = "0.6.0", path = "crates/rustack-dynamodb-core" }
rustack-sqs-model = { version = "0.6.0", path = "crates/rustack-sqs-model" }
rustack-sqs-http = { version = "0.6.0", path = "crates/rustack-sqs-http" }
rustack-sqs-core = { version = "0.6.0", path = "crates/rustack-sqs-core" }
rustack-ssm-model = { version = "0.6.0", path = "crates/rustack-ssm-model" }
rustack-ssm-http = { version = "0.6.0", path = "crates/rustack-ssm-http" }
rustack-ssm-core = { version = "0.6.0", path = "crates/rustack-ssm-core" }
rustack-sns-model = { version = "0.6.0", path = "crates/rustack-sns-model" }
rustack-sns-http = { version = "0.6.0", path = "crates/rustack-sns-http" }
rustack-sns-core = { version = "0.6.0", path = "crates/rustack-sns-core" }
rustack-lambda-model = { version = "0.6.0", path = "crates/rustack-lambda-model" }
rustack-lambda-http = { version = "0.6.0", path = "crates/rustack-lambda-http" }
rustack-lambda-core = { version = "0.6.0", path = "crates/rustack-lambda-core" }
rustack-events-model = { version = "0.6.0", path = "crates/rustack-events-model" }
rustack-logs-model = { version = "0.6.0", path = "crates/rustack-logs-model" }
rustack-logs-http = { version = "0.6.0", path = "crates/rustack-logs-http" }
rustack-logs-core = { version = "0.6.0", path = "crates/rustack-logs-core" }
rustack-events-http = { version = "0.6.0", path = "crates/rustack-events-http" }
rustack-events-core = { version = "0.6.0", path = "crates/rustack-events-core" }
rustack-kms-model = { version = "0.6.0", path = "crates/rustack-kms-model" }
rustack-kms-http = { version = "0.6.0", path = "crates/rustack-kms-http" }
rustack-kms-core = { version = "0.6.0", path = "crates/rustack-kms-core" }
rustack-kinesis-model = { version = "0.6.0", path = "crates/rustack-kinesis-model" }
rustack-kinesis-http = { version = "0.6.0", path = "crates/rustack-kinesis-http" }
rustack-kinesis-core = { version = "0.6.0", path = "crates/rustack-kinesis-core" }
rustack-secretsmanager-model = { version = "0.6.0", path = "crates/rustack-secretsmanager-model" }
rustack-secretsmanager-http = { version = "0.6.0", path = "crates/rustack-secretsmanager-http" }
rustack-secretsmanager-core = { version = "0.6.0", path = "crates/rustack-secretsmanager-core" }
rustack-ses-model = { version = "0.6.0", path = "crates/rustack-ses-model" }
rustack-ses-http = { version = "0.6.0", path = "crates/rustack-ses-http" }
rustack-ses-core = { version = "0.6.0", path = "crates/rustack-ses-core" }
rustack-apigatewayv2-model = { version = "0.6.0", path = "crates/rustack-apigatewayv2-model" }
rustack-apigatewayv2-http = { version = "0.6.0", path = "crates/rustack-apigatewayv2-http" }
rustack-apigatewayv2-core = { version = "0.6.0", path = "crates/rustack-apigatewayv2-core" }
rustack-cloudwatch-model = { version = "0.6.0", path = "crates/rustack-cloudwatch-model" }
rustack-cloudwatch-http = { version = "0.6.0", path = "crates/rustack-cloudwatch-http" }
rustack-cloudwatch-core = { version = "0.6.0", path = "crates/rustack-cloudwatch-core" }
rustack-dynamodbstreams-model = { version = "0.6.0", path = "crates/rustack-dynamodbstreams-model" }
rustack-dynamodbstreams-http = { version = "0.6.0", path = "crates/rustack-dynamodbstreams-http" }
rustack-dynamodbstreams-core = { version = "0.6.0", path = "crates/rustack-dynamodbstreams-core" }
rustack-iam-model = { version = "0.6.0", path = "crates/rustack-iam-model" }
rustack-iam-http = { version = "0.6.0", path = "crates/rustack-iam-http" }
rustack-iam-core = { version = "0.6.0", path = "crates/rustack-iam-core" }
rustack-sts-model = { version = "0.6.0", path = "crates/rustack-sts-model" }
rustack-sts-http = { version = "0.6.0", path = "crates/rustack-sts-http" }
rustack-sts-core = { version = "0.6.0", path = "crates/rustack-sts-core" }

# Async runtime
tokio = { version = "1.50", features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "sync",
  "time",
  "io-util",
  "fs",
  "net",
] }

# HTTP / networking
hyper = { version = "1.8", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = [
  "tokio",
  "server-auto",
  "server-graceful",
] }
http = "1.4"
http-body = "1.0"
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"
quick-xml = "0.39"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Concurrent data structures
dashmap = "6.1"
parking_lot = "0.12"

# Crypto / checksums
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
crc32fast = "1.5"
crc32c = "0.6"
crc64fast-nvme = "1.2"
base64 = "0.22"
hex = "0.4"
hmac = "0.12"
digest = "0.10"
subtle = "2.6"

# Time / IDs
chrono = { version = "0.4", features = ["serde"] }
time = "0.3.47"
uuid = { version = "1.22", features = ["v4"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async utilities
async-trait = "0.1"

# Regex
regex = "1.12"

# Utilities
bytes = "1.11"
rand = "0.9"
tempfile = "3.27"
percent-encoding = "2.3"
mime = "0.3"
futures = "0.3"
pin-project-lite = "0.2"
typed-builder = "0.23"
form_urlencoded = "1.2"

# Testing
tokio-test = "0.4"
aws-config = "1.8"
aws-sdk-s3 = "1.127"
aws-sdk-dynamodb = "1.109"
aws-sdk-dynamodbstreams = "1"
aws-sdk-sqs = "1.97"
aws-sdk-ssm = "1.108"
aws-sdk-sns = "1.98"
aws-sdk-lambda = "1.119"
aws-sdk-cloudwatch = "1"
aws-sdk-cloudwatchlogs = "1.121"
aws-sdk-eventbridge = "1.104"
aws-sdk-kms = "1"
aws-sdk-kinesis = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-ses = "1"
aws-sdk-apigatewayv2 = "1"
aws-sdk-iam = "1"
aws-sdk-sts = "1"
reqwest = { version = "0.13", features = ["json"] }
aws-credential-types = "1.2"
aws-smithy-runtime-api = "1.11"
