[package]
name = "ruststack-s3-server"
description = "High-performance S3 server compatible with LocalStack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "ruststack-s3-server"
path = "src/main.rs"

[dependencies]
ruststack-core = { workspace = true }
ruststack-s3-core = { workspace = true }
ruststack-s3-http = { workspace = true }
ruststack-s3-model = { path = "../../crates/ruststack-s3-model" }

# Async
tokio = { workspace = true }

# HTTP
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
bytes = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-credential-types = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
