[package]
name = "ruststack-server"
description = "High-performance AWS-compatible server (S3 + DynamoDB) for LocalStack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "ruststack-server"
path = "src/main.rs"

[dependencies]
# Internal crates - shared
ruststack-core = { workspace = true }
ruststack-auth = { workspace = true }

# Internal crates - S3
ruststack-s3-core = { workspace = true }
ruststack-s3-http = { workspace = true }
ruststack-s3-model = { workspace = true }

# Internal crates - DynamoDB
ruststack-dynamodb-core = { workspace = true }
ruststack-dynamodb-http = { workspace = true }

# Async
tokio = { workspace = true }

# HTTP
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
bytes = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-credential-types = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
