[package]
name = "ruststack-server"
description = "High-performance AWS-compatible server (S3 + DynamoDB) for LocalStack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "ruststack-server"
path = "src/main.rs"

[features]
default = ["s3", "dynamodb"]
s3 = ["dep:ruststack-s3-core", "dep:ruststack-s3-http", "dep:ruststack-s3-model"]
dynamodb = ["dep:ruststack-dynamodb-core", "dep:ruststack-dynamodb-http"]

[dependencies]
# Internal crates - shared
ruststack-core = { workspace = true }
ruststack-auth = { workspace = true }

# Internal crates - S3 (optional, gated by "s3" feature)
ruststack-s3-core = { workspace = true, optional = true }
ruststack-s3-http = { workspace = true, optional = true }
ruststack-s3-model = { workspace = true, optional = true }

# Internal crates - DynamoDB (optional, gated by "dynamodb" feature)
ruststack-dynamodb-core = { workspace = true, optional = true }
ruststack-dynamodb-http = { workspace = true, optional = true }

# Async
tokio = { workspace = true }

# HTTP
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
bytes = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-credential-types = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
