[package]
name = "ruststack-server"
description = "High-performance AWS-compatible server (S3 + DynamoDB) for LocalStack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "ruststack-server"
path = "src/main.rs"

[features]
default = ["s3", "dynamodb", "sqs", "ssm", "sns", "lambda", "events", "logs", "kms", "kinesis", "secretsmanager"]
s3 = ["dep:ruststack-s3-core", "dep:ruststack-s3-http", "dep:ruststack-s3-model"]
dynamodb = ["dep:ruststack-dynamodb-core", "dep:ruststack-dynamodb-http"]
sqs = ["dep:ruststack-sqs-core", "dep:ruststack-sqs-http"]
ssm = ["dep:ruststack-ssm-core", "dep:ruststack-ssm-http"]
sns = ["dep:ruststack-sns-core", "dep:ruststack-sns-http", "dep:ruststack-sqs-model", "sqs"]
lambda = ["dep:ruststack-lambda-core", "dep:ruststack-lambda-http"]
events = ["dep:ruststack-events-core", "dep:ruststack-events-http", "dep:ruststack-sqs-model", "sqs"]
logs = ["dep:ruststack-logs-core", "dep:ruststack-logs-http"]
kms = ["dep:ruststack-kms-core", "dep:ruststack-kms-http"]
kinesis = ["dep:ruststack-kinesis-core", "dep:ruststack-kinesis-http"]
secretsmanager = ["dep:ruststack-secretsmanager-core", "dep:ruststack-secretsmanager-http"]

[dependencies]
# Internal crates - shared
ruststack-core = { workspace = true }
ruststack-auth = { workspace = true }

# Internal crates - S3 (optional, gated by "s3" feature)
ruststack-s3-core = { workspace = true, optional = true }
ruststack-s3-http = { workspace = true, optional = true }
ruststack-s3-model = { workspace = true, optional = true }

# Internal crates - DynamoDB (optional, gated by "dynamodb" feature)
ruststack-dynamodb-core = { workspace = true, optional = true }
ruststack-dynamodb-http = { workspace = true, optional = true }

# Internal crates - SQS (optional, gated by "sqs" feature)
ruststack-sqs-core = { workspace = true, optional = true }
ruststack-sqs-http = { workspace = true, optional = true }

# Internal crates - SSM (optional, gated by "ssm" feature)
ruststack-ssm-core = { workspace = true, optional = true }
ruststack-ssm-http = { workspace = true, optional = true }

# Internal crates - SNS (optional, gated by "sns" feature)
ruststack-sns-core = { workspace = true, optional = true }
ruststack-sns-http = { workspace = true, optional = true }
ruststack-sqs-model = { workspace = true, optional = true }

# Internal crates - Lambda (optional, gated by "lambda" feature)
ruststack-lambda-core = { workspace = true, optional = true }
ruststack-lambda-http = { workspace = true, optional = true }

# Internal crates - EventBridge (optional, gated by "events" feature)
ruststack-events-core = { workspace = true, optional = true }
ruststack-events-http = { workspace = true, optional = true }

# Internal crates - CloudWatch Logs (optional, gated by "logs" feature)
ruststack-logs-core = { workspace = true, optional = true }
ruststack-logs-http = { workspace = true, optional = true }

# Internal crates - KMS (optional, gated by "kms" feature)
ruststack-kms-core = { workspace = true, optional = true }
ruststack-kms-http = { workspace = true, optional = true }

# Internal crates - Kinesis (optional, gated by "kinesis" feature)
ruststack-kinesis-core = { workspace = true, optional = true }
ruststack-kinesis-http = { workspace = true, optional = true }

# Internal crates - Secrets Manager (optional, gated by "secretsmanager" feature)
ruststack-secretsmanager-core = { workspace = true, optional = true }
ruststack-secretsmanager-http = { workspace = true, optional = true }

# Async
tokio = { workspace = true }

# HTTP
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async utilities
async-trait = { workspace = true }

# Utilities
bytes = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-credential-types = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
