[package]
name = "rustack-apigatewayv2-core"
description = "API Gateway v2 core business logic for Rustack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustack-core = { workspace = true }
rustack-apigatewayv2-model = { workspace = true }
rustack-apigatewayv2-http = { workspace = true }

http = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
