[package]
name = "rustack-cloudfront-dataplane"
description = "CloudFront minimal pass-through data plane for Rustack"
version = "0.7.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustack-cloudfront-core = { workspace = true }
rustack-cloudfront-model = { workspace = true }
rustack-s3-core = { workspace = true }
rustack-s3-model = { workspace = true }

hyper = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }

reqwest = { workspace = true, optional = true }

[features]
default = ["http-origin"]
http-origin = ["dep:reqwest"]
