[package]
name = "rustack-cloudfront-http"
description = "CloudFront HTTP layer (restXml) for Rustack"
version = "0.7.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustack-cloudfront-core = { workspace = true }
rustack-cloudfront-model = { workspace = true }
rustack-auth = { workspace = true }

hyper = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
quick-xml = { workspace = true }
chrono = { workspace = true }
form_urlencoded = { workspace = true }
percent-encoding = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
