[package]
name = "rustack-cloudwatch-core"
description = "CloudWatch Metrics business logic for Rustack"
version = "0.7.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustack-core = { workspace = true }
rustack-cloudwatch-model = { workspace = true }
rustack-cloudwatch-http = { workspace = true }
rustack-auth = { workspace = true }
http = { workspace = true }

dashmap = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
