[package]
name = "rustack-cloudwatch-http"
description = "CloudWatch Metrics HTTP service layer for Rustack (awsQuery + rpcv2Cbor protocols)"
version = "0.7.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustack-cloudwatch-model = { workspace = true }
rustack-auth = { workspace = true }

hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }

bytes = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

tracing = { workspace = true }
uuid = { workspace = true }

# http_body::Body trait
http-body = { workspace = true }

# Serialization
ciborium = { workspace = true }
serde_json = { workspace = true }

# awsQuery form-urlencoded parsing
form_urlencoded = { workspace = true }
