[package]
name = "rustack-dynamodb-core"
description = "DynamoDB business logic and storage engine for Rustack"
version = "0.7.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustack-core = { workspace = true }
rustack-dynamodb-model = { workspace = true }
rustack-dynamodb-http = { workspace = true }
rustack-auth = { workspace = true }
http = { workspace = true }

dashmap = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
